# aurora

./: .coderabbit.yaml  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  5xx_rca_validation.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COST_OPTIMIZATION_PLAN.md  DEMO_BACKUP_INFO.md  HEYREACH_CONNECTION_ANALYTICS.md  INFRASTRUCTURE_CONTEXT_OUTPUT.md  LICENSE  LICENSE-THIRD-PARTY.md  Makefile  README.md  SECURITY.md  billing_script.sh  docker-compose.airgap.yml  docker-compose.airtight.yml  docker-compose.prod-local.yml  docker-compose.traefik.yml  docker-compose.yaml  gen_nr_sql.py  index.yaml  pr_reviews.csv  prod.docker-compose.yml  test_logic.py
.github/: CODEOWNERS
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
client/: .dockerignore  .eslintignore  .gitignore  Dockerfile  docker-entrypoint.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
demo-data/: aurora_db.sql  cloudbees.sql  demo-incident-1.sql  (+10 more)
tests/e2e-agents/: .env.example  pyproject.toml  test_incidents.py  test_incidents_adversarial.py
tests/e2e-agents/e2e_agents/: ci_entrypoint.py  cli.py
tests/e2e-agents/e2e_agents/agents/: auth.py  base.py  chat.py  custom.py  general.py  incidents.py  navigation.py  registry.py  settings.py
tests/e2e-agents/e2e_agents/config/: settings.py
tests/e2e-agents/e2e_agents/infra/: wait_for_ready.py
tests/e2e-agents/e2e_agents/reporting/: formatter.py  github.py  json_output.py
tests/e2e-agents/e2e_agents/runner/: browser.py  engine.py  models.py
(+1844 files in other folders)
