[project]
name = "aurora-e2e-agents"
version = "0.1.0"
description = "LLM-powered adversarial browser testing for Aurora"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.6,<0.14",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0",
    "click>=8.0",
]

[project.scripts]
e2e-agents = "e2e_agents.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["e2e_agents*"]
